fix: nav z-index and section ids

--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -32,6 +32,7 @@
   padding: 2.4rem;
   background-color: white;
   align-items: center;
+  z-index: 5;
 }
 
 .visible {
